# Argus

./: .argus.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CHANGELOG_ARGUS_FIXES.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DISCLOSURE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: argus-scan.yml  ci.yml  docker.yml  docs.yml  locked-install.yml  publish.yml  scorecard.yml
architecture/: index.html
attack-simulation/: index.html
benchmarks/: README.md  accuracy.py  index.html  run_benchmarks.py
benchmarks/results/: SUMMARY.md  accuracy.json  dvwa.json  juice-shop.json
ci-cd/: index.html
comparison/: index.html
configuration/: index.html
dashboard/: index.html
docs/: README.md  architecture.md  attack-simulation.md  benchmarks.md  ci-cd.md  comparison.md  configuration.md  dashboard.md  fixing.md  index.md  llm-security.md  mcp.md  monitoring.md  performance.md  plugins.md  scanners.md  security.md  triage.md
examples/custom-rules/: example-rules.yml
examples/vulnerable-app/: Dockerfile  app.py  requirements.txt
fixing/: index.html
llm-security/: index.html
mcp/: index.html
monitoring/: index.html
performance/: index.html
plugins/: index.html
scanners/: index.html
search/: search_index.json
security/: index.html
src/argus/: __init__.py  __main__.py  baseline.py  plugins.py  targets.py  upload.py
src/argus/agents/: __init__.py  base.py  enrichment.py  exploit.py  patch.py
src/argus/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  heuristic.py  ollama_provider.py  openai_provider.py
src/argus/analysis/: __init__.py  attack_chains.py  languages.py  reachability.py  repository.py
src/argus/cli/: __init__.py  main.py
src/argus/core/: __init__.py  cache.py  config.py  engine.py  models.py  plugin.py  project.py
src/argus/dashboard/: __init__.py  app.py  charts.py  db.py  store.py
src/argus/dashboard/static/: app.css  app.js
src/argus/dashboard/templates/: base.html  project.html  projects.html  scan.html  upload.html
src/argus/dynamic/: __init__.py  posture.py
src/argus/mcp/: __init__.py  server.py
src/argus/remediation/: __init__.py  annotations.py  applier.py  git_ops.py  hosting.py  pr_review.py  pullrequest.py  rewrites.py
src/argus/reporting/: __init__.py  audience.py  badge.py  gitlab.py  html.py  json_reporter.py  learn.py  markdown.py  sarif.py  vex.py
src/argus/scanners/: __init__.py  ast_js.py  ast_python.py  ast_python_interproc.py  custom_rules.py  dependencies.py  exploit_signals.py  iac.py  llm.py  osv.py  patterns.py  secret_rotation.py  secret_verify.py  secrets.py  secrets_history.py
src/argus/scanners/data/: __init__.py  advisories.json
templates/: scan.yml
tests/: conftest.py  test_accuracy_regressions.py  test_allowlist.py  test_analysis_and_plugins.py  test_ast_interproc.py  test_ast_js.py  test_ast_python.py  test_attack_chains.py  test_audience.py  test_autonomy_ladder.py  test_badge_reporter.py  test_cache.py  test_custom_rules.py  test_dashboard.py  test_detection_fixes.py  test_docs_url.py  test_engine_and_agents.py  test_enrichment_injection.py  test_enterprise.py  test_exclude_paths.py  test_exploit_signals.py  test_fuzz_robustness.py  test_go_rules.py  test_golden_snapshot.py  test_inline_suppressions.py  test_learn.py  test_llm_scanner.py  test_mcp_server.py  test_models.py  test_osv.py  test_phase0_hardening.py  test_posture.py  test_pr_annotations.py  test_pr_review.py  test_reachability.py  test_redos_rules.py  test_remediation.py  test_reporters.py  test_sca.py  test_scanners.py  (+7 more)
tests/fixtures/: golden_app.expected.json
tests/fixtures/golden_app/: Dockerfile  app.py
triage/: index.html
