[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "argus-appsec"
version = "0.6.0"
description = "An open-source AI Security Engineer: maps your application, finds vulnerabilities, explains them, and proposes verified fixes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Haseeb Farooq", email = "haseebfarooq35@gmail.com" }]
keywords = [
  "security",
  "appsec",
  "sast",
  "vulnerability-scanner",
  "penetration-testing",
  "ai",
  "llm",
  "devsecops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
# Cloud AI providers
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
# AST-based data-flow scanning (tree-sitter). Optional: without it, Argus uses the
# regex + lightweight-taint code scanner and skips the deeper AST tier gracefully.
ast = [
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
]
# Everything for local development and tests
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
]

[project.urls]
Homepage = "https://github.com/hasipfaruk/Argus"
Documentation = "https://github.com/hasipfaruk/Argus/tree/main/docs"
Repository = "https://github.com/hasipfaruk/Argus"
Issues = "https://github.com/hasipfaruk/Argus/issues"

[project.scripts]
argus = "argus.cli.main:app"

# Plugins are discovered through this entry-point group. Third-party packages
# register scanners, reporters, and AI providers here without touching the core.
[project.entry-points."argus.plugins"]
builtin = "argus.plugins:register_builtins"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "osv_network: exercises the OSV client with a mocked transport (never the real network)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# The example app contains deliberately insecure, non-idiomatic code so the
# scanners have something to find. Linting it is meaningless — exclude it.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (Option/Argument) as parameter
# defaults; B008 flags that pattern but it is correct and idiomatic here.
"src/argus/cli/*" = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
packages = ["argus"]
